--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "cross-domain-storage": "^2.0.7",
+    "cross-storage": "^1.0.0",
     "next": "latest",
     "next-pwa": "^3.1.0",
     "react": "^17.0.2",
